src/app/app.component.css
.mat-toolbar-row, .mat-toolbar-single-row {
    height: 85px;
    margin: 0px ; 
}

.mat-icon-button {
    padding: 0;
    min-width: 0;
    width: 40px;
    height:auto ;
    flex-shrink: 0;
    line-height: 40px;
    border-radius: 50%;
}

header {
  color: #fff;
  text-align: center;
}
  .title {
    padding: 50px 0;
  }
    .mat-display-1 {
      margin: 0 0 30px;
    }
    .mat-h2 {
      margin: 0;
    }

@media only screen and (max-width: 650px) {
    img {
        height:90% ;
        width:90% ; 
    }
}

